# rental-management-system

./: .dockerignore  .env.example  .env.test.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  PHASE3-PROGRESS-CHAT2.md  PHASE3-PROGRESS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: backend-ci.yml  backend-deploy-production.yml  backend-deploy-staging.yml
alembic/: env.py
alembic/versions/: 140877bc29e5_initial_schema.py  25bfdb8601ff_add_partial_unique_indexes.py  3644b0dd524b_add_partial_unique_indexes.py  55e0dc5c8b44_add_unique_constraint_on_users_email.py  a4d3745501b5_add_hot_path_indexes.py  b5e047e8f3c4_initial_schema.py
app/: main.py
app/api/: deps.py  health.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py
app/api/v1/routes/: auth.py
app/core/: config.py  enums.py  exceptions.py  logging.py  security.py
app/db/: base.py  session.py
app/middleware/: request_id.py
app/models/: __init__.py  audit_log.py  invoice.py  lease.py  meter_reading.py  notification.py  occupant.py  payment.py  property.py  room.py  service.py  service_room.py  tenant.py  token.py  user.py
app/repos/: token_repo.py  user_repo.py
app/repositories/: user_repo.py
app/schemas/: auth.py
app/services/: auth_service.py
docs/: PHASE3-PROGRESS-CHAT3.md  PHASE3-SUMMARY.md  PHASE4-STAGE1.1-SUMMARY.md
docs/00-overview/: glossary.md  vision.md
docs/01-requirements/: 01-auth-rbac.md  02-property-room.md  03-tenant.md  04-lease.md  05-service.md  06-meter-reading.md  07-invoice.md  08-payment.md  PHASE2-REVIEW-PATCHES.md  PHASE2-REVIEW.md  PHASE2-SUMMARY.md
docs/02-architecture/: ADR-0002-cron-architecture.md  ADR-0005-rbac-strategy.md  PHASE3-FRONTEND-NOTES.md
docs/02-architecture/wireframes/: 01-login-dashboard-entry.md  02-landlord-dashboard.md  03-meter-reading-batch.md  04-invoice-preview-commit.md  05-payment-recording.md  README.md
docs/03-database/: erd-reference.md  erd.mmd
docs/04-api/: api-design-decisions.md  endpoints.md  openapi.yaml
docs/05-implementation/: PHASE4-STAGE1_2-SUMMARY.md
docs/07-deployment/: rollback-runbook.md  secrets-management.md  vps-setup.md
docs/decisions/: ADR-0001-lifecycle-field-naming.md  ADR-0003-audit-log.md  ADR-0004-notification-framework.md  ADR-0006-data-retention.md  ADR-0007-jwt-refresh-rotation.md  ADR-0008-frontend-stack.md  ADR-0009-cicd-pipeline.md  ADR-template.md
scripts/: init-test-db.sql  smoke_test.py  test_db.py
tests/: conftest.py  test_auth.py  test_health.py
tests/integration/: test_auth_get_current_user.py  test_auth_login.py  test_auth_register.py  test_db_isolation.py  test_health.py
