[project]
name = "rental-management-system"
version = "0.1.0"
description = "RMS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt<4.1",
    "fastapi>=0.136.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.13.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.38",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
    "types-python-jose>=3.5.0.20260408",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "B",     # flake8-bugbear (common bugs)
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade (modern Python syntax)
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line too long (formatter handles this)
    "B008",  # function call in default argument (FastAPI Depends pattern)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = [
    "alembic/versions/",
    ".venv/",
]

# Modules ngoài có type stubs kém — bớt strict
[[tool.mypy.overrides]]
module = [
    "passlib.*",
    "structlog.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "app.models.*",
    "app.db.base",
]
disable_error_code = ["call-overload"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]              # allow assert in tests
"alembic/env.py" = ["E402"]             # module-level import not at top is intentional
"tests/conftest.py" = ["E402", "F401"]  # E402: setup env before imports; F401: app.models for SQLModel registration

